syntax = "proto3";

import "google/protobuf/any.proto";

package proto;

// 指定包的路径以及包名
option go_package = "./;proto";

message Pager {
  int64 page = 1;
  int64 page_size = 2;
  int64 total_rows = 3;
}

message Error {
  int32 code = 1;  // 错误代码
  string message = 2;  // 错误消息
  google.protobuf.Any detail = 3;  // 错误详细信息
}