syntax = "proto3";

package proto;

// 指定包的路径以及包名
option go_package = "./;proto";

import "common.proto";
import "google/api/annotations.proto";

service TagService {
  rpc GetTagList (GetTagListRequest) returns (GetTagListResponse) {
    option (google.api.http) = {
      get: "/api/v1/tags"
    };
  }
}

message GetTagListRequest {
  string name = 1;
  uint32 state = 2;
}

message Tag {
  int64 id = 1;
  string name = 2;
  uint32 state = 3;
}

message GetTagListResponse {
  repeated Tag list = 1;
  Pager pager = 2;
}